welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:23: error: not found: value off
			return off
                               ^alarmClock:21: error: type mismatch;
 found   : Unit
 required: String
				if ((day==6 || day==0) && vacation==true)
                                ^